--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -6,6 +6,10 @@
   border-radius: 5px;
 }
 
+.user_image {
+  width: 62px;
+  height: 62px;
+}
 
 
 /************** Edit photo page side bar styles *************/
