--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,12 @@
     height: 150px !important;
 
 }
+
+/******* Home Page Pagination *******/
+
+.pager .active a {
+
+    background-color: #000;
+    color: #fff;
+
+}
