Delete confirm question  implemented

--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -94,5 +94,14 @@
   position: fixed !important;
   
   }
-  
+
+
+  /*******************Login Page ********/
+
+  #login-id label {
+
+  color:#fff;
+
+
+  }
    
